<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pc.emil.coffeex.activities.RegisterUserActivity"
    tools:showIn="@layout/app_bar_register_user">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/reg_user_sign_up"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_user_login" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_user_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/check_pass_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/check_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_user_repeat_pass"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_user_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/register_progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp" />

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/reg_user_sign_up" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>